# Personal-trading-strategy

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: strategy.yaml
ml_time_series_project/: README.md  run_ml_timeseries.py
scripts/: run_research.py
src/quant_research/: __init__.py  analysis_tools.py  config.py  data.py  features.py  pca.py  plotting.py  registry.py  research.py  walk_forward.py
src/quant_research/backtest/: __init__.py  engine.py  metrics.py
src/quant_research/strategies/: __init__.py  base.py  bollinger_ema.py  pca_momentum.py  trend.py
tests/: test_metrics.py
